--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@hotwired/turbo-rails": "^8.0.12",
     "@rollup/pluginutils": "^5.1.4",
     "@svgr/plugin-svgo": "^8.1.0",
+    "axios": "1.7.7",
     "babel-plugin-js-logger": "^1.0.17",
     "js-logger": "^1.6.1",
+    "react-router-dom": "5.3.0",
     "tailwindcss": "^3.4.1",
     "vite": "6.0.3"
   },
