--- a/package.json
+++ b/package.json
@@ -33,8 +33,14 @@
     "@svgr/plugin-svgo": "^8.1.0",
     "axios": "1.7.7",
     "babel-plugin-js-logger": "^1.0.17",
+    "css-minimizer-webpack-plugin": "^3.2.0",
     "js-logger": "^1.6.1",
+    "mini-css-extract-plugin": "^2.7.5",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "5.3.0",
+    "react_ujs": "3.1.1",
     "tailwindcss": "^3.4.1",
     "vite": "6.0.3"
   },
