--- a/package.json
+++ b/package.json
@@ -2,29 +2,69 @@
   "name": "app",
   "private": true,
   "devDependencies": {
+    "@babel/eslint-parser": "7.17.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "esbuild": "^0.25.0",
     "esbuild-plugin-svgr": "^3.1.0",
     "esbuild-plugins-node-modules-polyfill": "^1.6.8",
     "esbuild-sass-plugin": "^3.3.1",
+    "eslint": "8.12.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jam3": "0.2.3",
+    "eslint-plugin-json": "3.1.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.4.0",
+    "eslint-plugin-unused-imports": "2.0.0",
+    "husky": "^8.0.0",
     "i18next": "21.7.0",
+    "lint-staged": "12.3.7",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.31",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "7.8.2",
+    "prettier": "^2.6.1",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "ramda": "^0.29.0",
     "sass": "^1.59.3",
     "stream-browserify": "^3.0.0"
   },
+  "lint-staged": {
+    "app/**/*.{js,jsx,json}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "{package.json,.eslintrc.js,.prettierrc.js}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    ".eslint-rules/**/*": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "./**/*.rb": [
+      "bundle exec rubocop -a --force-exclusion"
+    ],
+    "{Gemfile,Rakefile,config.ru}": [
+      "bundle exec rubocop -a --force-exclusion"
+    ],
+    "app/views/**/*.html.erb": [
+      "bundle exec erblint --lint-all --format compact -a"
+    ]
+  },
   "scripts": {
     "build": "node esbuild.config.js",
-    "dev": "vite"
+    "dev": "vite",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@babel/core": "^7.19.1",
     "@babel/plugin-transform-react-constant-elements": "^7.25.9",
+    "@babel/plugin-transform-runtime": "7.19.1",
     "@babel/preset-env": "7.17.10",
     "@babel/preset-react": "^7.16.7",
     "@hotwired/stimulus": "^3.2.2",
@@ -33,6 +73,7 @@
     "@svgr/plugin-svgo": "^8.1.0",
     "axios": "1.7.7",
     "babel-plugin-js-logger": "^1.0.17",
+    "babel-plugin-macros": "^3.1.0",
     "css-minimizer-webpack-plugin": "^3.2.0",
     "js-logger": "^1.6.1",
     "mini-css-extract-plugin": "^2.7.5",
