--- a/package.json
+++ b/package.json
@@ -67,10 +67,12 @@
     "@babel/plugin-transform-runtime": "7.19.1",
     "@babel/preset-env": "7.17.10",
     "@babel/preset-react": "^7.16.7",
+    "@bigbinary/neetoui": "4.0.3",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
     "@rollup/pluginutils": "^5.1.4",
     "@svgr/plugin-svgo": "^8.1.0",
+    "antd": "4.23.1",
     "axios": "1.7.7",
     "babel-plugin-js-logger": "^1.0.17",
     "babel-plugin-macros": "^3.1.0",
@@ -81,6 +83,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.3.0",
+    "react-toastify": "8.0.2",
     "react_ujs": "3.1.1",
     "tailwindcss": "^3.4.1",
     "vite": "6.0.3"
